add  query deviceStates
